Update VL cache
