# src/app/viralload/routes.js
@@ -172,25 +172,26 @@ routes.get(
 )
 
 // Weekly Reports
-routes.get("/weeklyreports/instrument", WeeklyReportController.getTotalIntrumentCapacity)
-routes.get("/weeklyreports/instrument_samples", WeeklyReportController.getSamplesByInstrument)
+routes.get("/weeklyreports/instrument", WeeklyReportController.getTotalIntrumentCapacity);
+routes.get("/weeklyreports/instrument_samples", WeeklyReportController.getSamplesByInstrument);
 
-routes.get("/vl/weeklyreports/samples_by_instrument", ReportsController.getTotalIntrumentCapacity)
-routes.get("/vl/weeklyreports/backlogged_samples", ReportsController.getBackloggedSamples)
-routes.get("/vl/weeklyreports/registered_samples", ReportsController.getRegisteredSamples)
-routes.get("/vl/weeklyreports/tested_samples", ReportsController.getTestedSamples)
-routes.get("/vl/weeklyreports/non_validated_samples", ReportsController.getNonValidatedSamples)
-routes.get("/vl/weeklyreports/fsr_incompleteness_report/:start_date/:end_date", ReportsController.getFSRIncompletenessReport)
+routes.get("/vl/weeklyreports/samples_by_instrument", ReportsController.getTotalIntrumentCapacity);
+routes.get("/vl/weeklyreports/backlogged_samples", ReportsController.getBackloggedSamples);
+routes.get("/vl/weeklyreports/registered_samples", ReportsController.getRegisteredSamples);
+routes.get("/vl/weeklyreports/tested_samples", ReportsController.getTestedSamples);
+routes.get("/vl/weeklyreports/non_validated_samples", ReportsController.getNonValidatedSamples);
+routes.get("/vl/weeklyreports/fsr_incompleteness_report/:start_date/:end_date", ReportsController.getFSRIncompletenessReport);
 
-routes.get("/vl/weeklyreports/results/:location", ReportsController.getResultsByHealthFacility)
+routes.get("/vl/weeklyreports/results/:location", ReportsController.getResultsByHealthFacility);
+routes.get("/vl/weeklyreports/monitore_backlogs", ReportsController.monitoreLabBacklog);
 
 // MonthlyReportsController
-routes.get("/vl/monthlyreports/age/:start_date/:end_date", MonthlyReportsController.getVlReportByAge)
-routes.get("/vl/monthlyreports/gender/:start_date/:end_date", MonthlyReportsController.getVlReportByGender)
-routes.get("/vl/monthlyreports/pregnant/:start_date/:end_date", MonthlyReportsController.getVlReportForPregnant)
-routes.get("/vl/monthlyreports/breastfeeding/:start_date/:end_date", MonthlyReportsController.getVlReportForBreastfeeding)
-routes.get("/vl/monthlyreports/tat_by_facility/:start_date/:end_date", MonthlyReportsController.getTurnaroundTimeByFacility)
-routes.get("/vl/monthlyreports/tat_by_lab/:start_date/:end_date", MonthlyReportsController.getTurnaroundTimeByLab)
+routes.get("/vl/monthlyreports/age/:start_date/:end_date", MonthlyReportsController.getVlReportByAge);
+routes.get("/vl/monthlyreports/gender/:start_date/:end_date", MonthlyReportsController.getVlReportByGender);
+routes.get("/vl/monthlyreports/pregnant/:start_date/:end_date", MonthlyReportsController.getVlReportForPregnant);
+routes.get("/vl/monthlyreports/breastfeeding/:start_date/:end_date", MonthlyReportsController.getVlReportForBreastfeeding);
+routes.get("/vl/monthlyreports/tat_by_facility/:start_date/:end_date", MonthlyReportsController.getTurnaroundTimeByFacility);
+routes.get("/vl/monthlyreports/tat_by_lab/:start_date/:end_date", MonthlyReportsController.getTurnaroundTimeByLab);
 
 
 
